--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</header>
 	<div class="container contenido">
 		<div class="row">
-			<div class="span10 offset1">
+			<div class="span10 offset1 slide">
 				<img src="images/content/slide1.jpg" alt="Slide1" />
 			</div>
 		</div>
