--- a/index.html
+++ b/index.html
@@ -28,7 +28,18 @@
 	<div class="container contenido">
 		<div class="row">
 			<div class="span10 offset1 slide">
-				<img src="images/content/slide1.jpg" alt="Slide1" />
+				<div id="myCarousel" class="carousel slide">
+					<div class="carousel-inner">
+						<div class="item active">
+							<img src="images/content/slide1.jpg" alt="Slide1" />
+						</div>
+						<div class="item">
+							<img src="images/content/slide2.jpg" alt="Slide2" />
+						</div>
+					</div>
+					<a href="#myCarousel" data-slide="prev" class="left carousel-control">&lsaquo;</a>
+					<a href="#myCarousel" data-slide="next" class="right carousel-control">&rsaquo;</a>
+				</div>
 			</div>
 		</div>
 		<div class="row">
@@ -46,7 +57,21 @@
 		</div>
 	</div>
 	<footer class="container">
-		<p>Todos los derechos reservados.</p>
+		<div class="row">
+			<div class="span5 offset1">
+				<p>&copy Todos los derechos reservados 2012-2013</p>
+			</div>
+			<div class="span3 offset3">
+				<img src="images/logo_blanco.png" alt="Microfundicion FGLE Logo Blanco">
+			</div>
+		</div>
 	</footer>
+	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript">
+		$('.carousel').carousel({
+			interval: 4500
+		})
+	</script>
 </body>
 </html>
