--- a/nosotros.html
+++ b/nosotros.html
@@ -27,7 +27,7 @@
 	</header>
 	<div class="container contenido">
 		<div class="row">
-			<div class="span10 offset1">
+			<div class="span10 offset1 nosotros">
 				<h2>Nosotros</h2>
 				<img src="images/content/nosotros1.jpg" alt="Nosotros Microfundicion FGLE" class="imagen_nosotros" />
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -58,7 +58,14 @@
 		</div>
 	</div>
 	<footer class="container">
-		<p>Todos los derechos reservados.</p>
+		<div class="row">
+			<div class="span5 offset1">
+				<p>&copy Todos los derechos reservados 2012-2013</p>
+			</div>
+			<div class="span3 offset3">
+				<img src="images/logo_blanco.png" alt="Microfundicion FGLE Logo Blanco">
+			</div>
+		</div>
 	</footer>
 </body>
 </html>
