--- a/productos.html
+++ b/productos.html
@@ -29,33 +29,128 @@
 		<div class="row">
 			<div class="span10 offset1">
 				<h2>Productos</h2>
-				<ul>
-					<li><a href="#">Producto 1</a></li>
-					<li><a href="#">Producto 2</a></li>
-					<li><a href="#">Producto 3</a></li>
-					<li><a href="#">Producto 4</a></li>
-					<li><a href="#">Producto 5</a></li>
-					<li><a href="#">Producto 6</a></li>
-					<li><a href="#">Producto 7</a></li>
-					<li><a href="#">Producto 8</a></li>
-					<li><a href="#">Producto 9</a></li>
-					<li><a href="#">Producto 10</a></li>
-					<li><a href="#">Producto 11</a></li>
-					<li><a href="#">Producto 12</a></li>
-					<li><a href="#">Producto 13</a></li>
-					<li><a href="#">Producto 14</a></li>
-					<li><a href="#">Producto 15</a></li>
-					<li><a href="#">Producto 16</a></li>
-					<li><a href="#">Producto 17</a></li>
-					<li><a href="#">Producto 18</a></li>
-					<li><a href="#">Producto 19</a></li>
-					<li><a href="#">Producto 20</a></li>
-				</ul>
+				<div class="tabbable tabs-left">
+					<ul class="nav nav-tabs">
+						<li class="active"><a href="#1" data-toggle="tab">Producto 1</a></li>
+						<li><a href="#2" data-toggle="tab">Producto 2</a></li>
+						<li><a href="#3" data-toggle="tab">Producto 3</a></li>
+						<li><a href="#4" data-toggle="tab">Producto 4</a></li>
+						<li><a href="#5" data-toggle="tab">Producto 5</a></li>
+						<li><a href="#6" data-toggle="tab">Producto 6</a></li>
+					</ul>
+					<div class="tab-content">
+						<div class="tab-pane active" id="1">
+							<ul class="thumbnails">
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/1.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/2.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/3.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/4.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/5.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/6.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/1.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/2.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/3.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/4.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/5.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/6.jpg" alt=""></a></li>
+							</ul>
+						</div>
+						<div class="tab-pane" id="2">
+							<ul class="thumbnails">
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/4.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/5.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/6.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/3.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/1.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/6.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/4.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/2.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/5.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/4.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/1.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/3.jpg" alt=""></a></li>
+							</ul>
+						</div>
+						<div class="tab-pane" id="3">
+							<ul class="thumbnails">
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/3.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/5.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/1.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/4.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/2.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/6.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/3.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/5.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/1.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/4.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/2.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/6.jpg" alt=""></a></li>
+							</ul>
+						</div>
+						<div class="tab-pane" id="4">
+							<ul class="thumbnails">
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/4.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/6.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/2.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/5.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/1.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/3.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/4.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/5.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/1.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/3.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/6.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/2.jpg" alt=""></a></li>
+							</ul>
+						</div>
+						<div class="tab-pane" id="5">
+							<ul class="thumbnails">
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/3.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/6.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/2.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/5.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/1.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/4.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/6.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/3.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/2.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/6.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/1.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/4.jpg" alt=""></a></li>
+							</ul>
+						</div>
+						<div class="tab-pane" id="6">
+							<ul class="thumbnails">
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/1.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/2.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/3.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/4.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/5.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/6.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/1.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/2.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/3.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/4.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/5.jpg" alt=""></a></li>
+								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/6.jpg" alt=""></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 	<footer class="container">
-		<p>Todos los derechos reservados.</p>
+		<div class="row">
+			<div class="span5 offset1">
+				<p>&copy Todos los derechos reservados 2012-2013</p>
+			</div>
+			<div class="span3 offset3">
+				<img src="images/logo_blanco.png" alt="Microfundicion FGLE Logo Blanco">
+			</div>
+		</div>
 	</footer>
+	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
