--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Microfundicion FGLE</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/estilos.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/estilos.css" />
 	<script type="text/javascript" src="js/live.js"></script>
 </head>
 <body>
@@ -28,17 +28,21 @@
 	<div class="container contenido">
 		<div class="row">
 			<div class="span10 offset1 slide">
-				<div id="myCarousel" class="carousel slide">
-					<div class="carousel-inner">
-						<div class="item active">
-							<img src="images/content/slide1.jpg" alt="Slide1" />
+				<div id="slides">
+					<div class="slides_container">
+						<div>
+							<a href="#">
+								<img src="images/content/slide1.jpg" alt="Slide1" />
+							</a>
 						</div>
-						<div class="item">
-							<img src="images/content/slide2.jpg" alt="Slide2" />
+						<div>
+							<a href="#">
+								<img src="images/content/slide2.jpg" alt="Slide2" />
+							</a>
 						</div>
 					</div>
-					<a href="#myCarousel" data-slide="prev" class="left carousel-control">&lsaquo;</a>
-					<a href="#myCarousel" data-slide="next" class="right carousel-control">&rsaquo;</a>
+					<a href="#" class="prev">Anterior</a>
+					<a href="#" class="next">Siguiente</a>
 				</div>
 			</div>
 		</div>
@@ -52,7 +56,9 @@
 				<p>facebook.com/microfundicionfgle</p>
 			</div>
 			<div class="span5">
-				<img src="images/content/visita_catalogo.jpg" alt="Visita Catalogo MFGLE">
+				<a href="productos.html">
+					<img src="images/content/visita_catalogo.jpg" alt="Visita Catalogo MFGLE" class="visita_catalogo" />
+				</a>
 			</div>
 		</div>
 	</div>
@@ -68,10 +74,15 @@
 	</footer>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script src="js/slides.min.jquery.js"></script>
 	<script type="text/javascript">
-		$('.carousel').carousel({
-			interval: 4500
-		})
+		$(document).ready(function(){	
+			$('#slides').slides({
+				preload: true,
+				slideSpeed: 700,
+				play: 5000
+			});
+		});
 	</script>
 </body>
 </html>
