Agregado fuente Overlock
Agregue una fuente no comun utilizando Google Font Web, especificamente
la Overlock

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Microfundicion FGLE</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/estilos.css" />
+	<link href='http://fonts.googleapis.com/css?family=Overlock:400,700' rel='stylesheet' type='text/css'>
 	<script type="text/javascript" src="js/live.js"></script>
 </head>
 <body>
@@ -16,7 +17,7 @@
 				</div>
 				<nav class="navbar span6">
 					<ul class="nav">
-						<li><a href="#">Inicio</a></li>
+						<li><a href="#" class="current">Inicio</a></li>
 						<li><a href="nosotros.html">Nosotros</a></li>
 						<li><a href="productos.html">Productos</a></li>
 						<li><a href="contacto.php">Contactos</a></li>
@@ -48,12 +49,16 @@
 		</div>
 		<div class="row">
 			<div class="span5 offset1">
-				<h1>MicrofundicionFGLE</h1>
-				<p>Detalles que haran la diferencia</p>
+				<div id="titulo_presentacion">
+					<h1>Microfundicion FGLE</h1>
+					<span class="destacado">
+						<h4>Detalles que haran la diferencia</h4>
+					</span>
+				</div>
 				<img src="images/content/social_icon.png" alt="Siguenos" class="social_icon" />
 				<h2>Siguenos:</h2>
-				<p>@MicrofundicionFGLE</p>
-				<p>facebook.com/microfundicionfgle</p>
+				<p><a href="http://facebook.com/">Facebook.com/microfundicionfgle</a></p>
+				<p><a href="http://twitter.com/">@MicrofundicionFGLE</a></p>
 			</div>
 			<div class="span5">
 				<a href="productos.html">
