--- a/nosotros.html
+++ b/nosotros.html
@@ -17,7 +17,7 @@
 				<nav class="navbar span6">
 					<ul class="nav">
 						<li><a href="index.html">Inicio</a></li>
-						<li><a href="#">Nosotros</a></li>
+						<li><a href="#" class="current">Nosotros</a></li>
 						<li><a href="productos.html">Productos</a></li>
 						<li><a href="contacto.php">Contactos</a></li>
 					</ul>
