--- a/productos.html
+++ b/productos.html
@@ -18,7 +18,7 @@
 					<ul class="nav">
 						<li><a href="index.html">Inicio</a></li>
 						<li><a href="nosotros.html">Nosotros</a></li>
-						<li><a href="#">Productos</a></li>
+						<li><a href="#" class="current">Productos</a></li>
 						<li><a href="contacto.php">Contactos</a></li>
 					</ul>
 				</nav>
