agregar light-box

--- a/productos.html
+++ b/productos.html
@@ -5,6 +5,7 @@
 	<title>Microfundicion FGLE</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/estilos.css">
+	<link href='http://fonts.googleapis.com/css?family=Overlock:400,700' rel='stylesheet' type='text/css'>
 	<script type="text/javascript" src="js/live.js"></script>
 </head>
 <body>
@@ -28,6 +29,18 @@
 	<div class="container contenido">
 		<div class="row">
 			<div class="span10 offset1">
+				<div id="mody" class="modal hide fade" tabindex="-1" role="dialog">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">x</button>
+						<h2>klk mody</h2>
+					</div>
+					<div class="modal-body">
+						<img src="images/pines/1.jpg" alt="pin" />
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn span6" data-dismiss="modal">Close</button>
+					</div>
+				</div>
 				<h2>Productos</h2>
 				<div class="tabbable tabs-left">
 					<ul class="nav nav-tabs">
@@ -41,18 +54,18 @@
 					<div class="tab-content">
 						<div class="tab-pane active" id="1">
 							<ul class="thumbnails">
-								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/1.jpg" alt=""></a></li>
-								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/2.jpg" alt=""></a></li>
-								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/3.jpg" alt=""></a></li>
-								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/4.jpg" alt=""></a></li>
-								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/5.jpg" alt=""></a></li>
-								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/6.jpg" alt=""></a></li>
-								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/1.jpg" alt=""></a></li>
-								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/2.jpg" alt=""></a></li>
-								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/3.jpg" alt=""></a></li>
-								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/4.jpg" alt=""></a></li>
-								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/5.jpg" alt=""></a></li>
-								<li class="span2"><a href="#" class="thumbnail"><img src="images/pines/6.jpg" alt=""></a></li>
+								<li class="span2"><a href="#mody" data-toggle="modal" class="thumbnail"><img src="images/pines/1.jpg" alt=""></a></li>
+								<li class="span2"><a href="#mody" data-toggle="modal" class="thumbnail"><img src="images/pines/2.jpg" alt=""></a></li>
+								<li class="span2"><a href="#mody" data-toggle="modal" class="thumbnail"><img src="images/pines/3.jpg" alt=""></a></li>
+								<li class="span2"><a href="#mody" data-toggle="modal" class="thumbnail"><img src="images/pines/4.jpg" alt=""></a></li>
+								<li class="span2"><a href="#mody" data-toggle="modal" class="thumbnail"><img src="images/pines/5.jpg" alt=""></a></li>
+								<li class="span2"><a href="#mody" data-toggle="modal" class="thumbnail"><img src="images/pines/6.jpg" alt=""></a></li>
+								<li class="span2"><a href="#mody" data-toggle="modal" class="thumbnail"><img src="images/pines/1.jpg" alt=""></a></li>
+								<li class="span2"><a href="#mody" data-toggle="modal" class="thumbnail"><img src="images/pines/2.jpg" alt=""></a></li>
+								<li class="span2"><a href="#mody" data-toggle="modal" class="thumbnail"><img src="images/pines/3.jpg" alt=""></a></li>
+								<li class="span2"><a href="#mody" data-toggle="modal" class="thumbnail"><img src="images/pines/4.jpg" alt=""></a></li>
+								<li class="span2"><a href="#mody" data-toggle="modal" class="thumbnail"><img src="images/pines/5.jpg" alt=""></a></li>
+								<li class="span2"><a href="#mody" data-toggle="modal" class="thumbnail"><img src="images/pines/6.jpg" alt=""></a></li>
 							</ul>
 						</div>
 						<div class="tab-pane" id="2">
