Mejorando aspecto slide
Agregue las flechitas de navegacion al slide y toques a su apariencia.

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 							</a>
 						</div>
 					</div>
-					<a href="#" class="prev">Anterior</a>
-					<a href="#" class="next">Siguiente</a>
+					<a href="#" class="prev"></a>
+					<a href="#" class="next"></a>
 				</div>
 			</div>
 		</div>
