--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="logo span6">
-					<img src="images/logo.png" alt="Microfundicion FGLE Logo" />
+					<a href="index.html"><img src="images/logo.png" alt="Microfundicion FGLE Logo" /></a>
 				</div>
 				<nav class="navbar span6">
 					<ul class="nav">
@@ -48,9 +48,17 @@
 			</div>
 		</div>
 		<div class="row">
+			<div class="span10 offset1 presentacion">
+				<h1>Somos Microfundicion FGLE</h1>
+				<p>Nosotros somos Microfundicion FGLE, una empresa dedicada a la fundicion de metales con el objetivo de.</p>
+				<p>Nuestros productos van dirigidos a empresas establecidas con necesidad de publicidad clara y objetiva, también para darle prestigio a ocasiones memorables.</p>
+				<p><a href="nosotros.html" class="btn btn-danger">Conozca mas sobre Microfundicion FGLE</a></p>
+			</div>
+		</div>
+		<div class="row">
 			<div class="span5 offset1">
 				<div id="titulo_presentacion">
-					<h1>Microfundicion FGLE</h1>
+					<h2>Microfundicion FGLE</h2>
 					<span class="destacado">
 						<h4>Detalles que haran la diferencia</h4>
 					</span>
@@ -70,7 +78,7 @@
 	<footer class="container">
 		<div class="row">
 			<div class="span5 offset1">
-				<p>&copy Todos los derechos reservados 2012-2013</p>
+				<p>&copy; Todos los derechos reservados 2012-2013</p>
 			</div>
 			<div class="span3 offset3">
 				<img src="images/logo_blanco.png" alt="Microfundicion FGLE Logo Blanco">
