Google Analytics y mas img productos
Agrego el seguimiento de google analytics y las imagenes nuevas de los
productos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
 	<link rel="stylesheet" href="css/estilos.css" />
 	<link href='http://fonts.googleapis.com/css?family=Overlock:400,700' rel='stylesheet' type='text/css'>
 	<script type="text/javascript" src="js/live.js"></script>
+	<script type="text/javascript">
+
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-36182944-1']);
+	  _gaq.push(['_trackPageview']);
+
+	  (function() {
+	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+
+	</script>
 </head>
 <body>
 	<header>
@@ -31,16 +44,11 @@
 			<div class="span10 offset1 slide">
 				<div id="slides">
 					<div class="slides_container">
-						<div>
-							<a href="#">
-								<img src="images/content/slide1.jpg" alt="Slide1" />
-							</a>
-						</div>
-						<div>
-							<a href="#">
-								<img src="images/content/slide2.jpg" alt="Slide2" />
-							</a>
-						</div>
+						<div><img src="images/content/slide1.jpg" alt="Slide1" /></div>
+						<div><img src="images/content/slide2.jpg" alt="Slide2" /></div>
+						<div><img src="images/content/slide3.jpg" alt="Slide3" /></div>
+						<div><img src="images/content/slide4.jpg" alt="Slide4" /></div>
+						<div><img src="images/content/slide5.jpg" alt="Slide5" /></div>
 					</div>
 					<a href="#" class="prev"></a>
 					<a href="#" class="next"></a>
