Fix producto monedas

--- a/productos.html
+++ b/productos.html
@@ -188,7 +188,7 @@
 				txtOf: "de"
 			});
 
-			$('#monedas a').lightBox({
+			$('#galery_monedas a').lightBox({
 				txtImage: "Imagen",
 				txtOf: "de"
 			});
